* Avoid automatic window resize on very long song titles.
  (sugg. by Johan Forsberg)
* See why AutoDJ was wrong with multiple selections from the same score set.
* Locking. (sugg. by Christian Hammers)
+ %title_or_filename% (sugg. by Kyoshiro)
* passive popup ending up blank?
* Fix flow of control for setFieldText to not rely on exceptions.
* Mood/CustomN/... reflection in songs?

MAJOR CHANGES:
* Playlist management button. [done]
* Continuous AutoDJ. (Shawn, Adam Ward) [done]
+ Support FLAC. [done]
+ Support M4A. [done] (Walter King)
* Switched to Scott Wheeler's Taglib. [done]
+ New UI for current song, imitating Rhythmbox.
  I guess imitation is the sincerest form of flattery. [done]
+ Hierarchical sorting. (album, track number) [done]
+ Added keyboard shortcuts for most important actions. [done]
+ Added a "small UI" mode. [done]
* Rewrite build instructions. [done]
+ Added a fully-fledged path browser. [done]
* New icons by Felipe Rivera. [done]
+ Added mood, tempo, custom1-3 fields. (Guido Schlabitz) [done]

MINOR IMPROVEMENTS:
+ Show configurable string in title bar. [done]
* Re-enable Ctrl+A. (Michael Albert) [done]
+ Added an install_to= option to SConstruct. (Klaus S. Madsen) [done]
* Added a pref to say whether to read ID3v1 or v2. [done]
* Changed "Play Now" semantics back to enqueuing in the middle of the 
  current list. [done]
* Text match criterion "startswith:" [done]
* Massive redraw speedup by avoiding several hundred round trips through
  XMMS on each redraw. Oops. [done]
+ Passive Popup now has Back and Forward buttons. (Guido Schlabitz) [done]
+ Added letterwise grouping of overview. (Guido Schlabitz) [done]
* Added more information to passive popup by default. [done]
* Convert to arch tree. [done]
* Have separate build tree, one for maintenance mode and 
  one for release. [done]
* Preserve AutoDJ-on status across runs. [done]
+ Big "play all" button. (sugg by "Mozai" and many others) [done]